<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Scrum</string>
    <string name="login_button">Login</string>
    <string name="login_hint_email">Enter you email</string>
    <string name="login_hint_password">Enter your password</string>
    <string name="Register">Register</string>
    <string name="RegNombre">Name</string>
    <string name="RegisName">Write your name here</string>
    <string name="RegApellido">Surname</string>
    <string name="RegLastName">Write your surname here</string>
    <string name="RegPass">Enter your pass</string>
    <string name="RegContras">Pass</string>
    <string name="Registrar">Register</string>
    <string name="Email">Email</string>
    <string name="login_error">Wrong user or password</string>
    <string name="login_empty_fields">Fields not filled</string>
    <string name="login_get_account">Get an account</string>
    <string name="RInport">Import</string>
    <string name="EmailError">Please introduce an email valid</string>
    <string name="nameAddProject">Name of Project</string>
    <string name="descriptionAddProject">Description of project</string>
    <string name="initialDateAddProject">Initial date:</string>
    <string name="endDateAddProject">End date:</string>
    <string name="buttonAddProject">Add project</string>
    <string name="dialog_loading">Loading</string>
    <string name="menu_view_users">View users</string>
    <string name="menu_delete_project">Delete project</string>
    <string name="menu_delete_task">Delete task</string>
    <string name="addTask">Add Task</string>
    <string name="TaskName">Enter name:</string>
    <string name="taskDescription">Enter description</string>
    <string name="TimeTask">Enter time:</string>
    <string name="sprints_error">Sprints badly loaded</string>
    <string name="tasks_error">Tasks badly loaded</string>
    <string name="addSprintSprintNumberLabel">Sprint Number:</string>
    <string name="addSprintInitialDate">Initial Date:</string>
    <string name="addSprintEndDate">End Date:</string>
    <string name="addSprintButton">Add Sprint</string>
    <string name="project_error">Projects badly loaded</string>
    <string name="menu_delete_sprints">Delete sprint</string>
    <string name="wrong_dates">"Wrong dates"</string>
    <string name="name_equired">"Name required"</string>
    <string name="description_required">"Description required"</string>
    <string name="sprint_number_required">"Sprint Number required"</string>
    <string name="check_empty_fields">"Please, check the empty field"</string>
    <string name="scrum_master">"Scrum Master: "</string>
    <string name="sprint">"Sprint: "</string>
    <string name="from">"From: "</string>
    <string name="to">" to "</string>
    <string name="user">"User: "</string>
    <string name="time">" Time: "</string>
    <string name="logout">"Log out"</string>
    <string name="addProjectMenu">"Add project"</string>
    <string name="addSprintMenu">"Add sprint"</string>
    <string name="addTaskMenu">"Add task"</string>
    <string name="deleteTaskMenu">"Delete task"</string>
    <string name="idTask">Id Task</string>
    <string name="StateTask">State</string>
    <string name="UserTask">User</string>
    <string name="ViewTaskDescription">Description</string>
    <string name="SprintTask">Sprint</string>
    <string name="DetailTask">Task Detail</string>
    <string name="ModifyTask">Modify Task</string>
    <string name="Save">Save</string>
    <string name="timeTask">Time</string>
    <string name="emailField">Email:</string>
    <string name="bt_call">Call</string>
    <string name="bt_send_message">Send message</string>
    <string name="Projects">Projects</string>
    <string name="Sprints">Sprints</string>
    <string name="Tasks">Tasks</string>
    <string name="EditTask">Edit task</string>
    <string name="ToDo">To do</string>
    <string name="Doing">Doing</string>
    <string name="Done">Done</string>
    <string name="editTaskHintTimeTask">Time</string>
    <string name="editTaskHintSprint">Sprint</string>
    <string name="editTaskHintDescription">Description</string>
    <string name="menu_view_charts">View charts</string>
    <string name="menu_edit_project">Edit project</string>
    <string name="editTaskMenu">Edit Task</string>
    <string name="EditProject">Edit project</string>
    <string name="menu_edit_user">Edit users</string>
    <string name="sprintHint">"Sprint"</string>
    <string name="users">Users</string>
    <string name="userInfo">Contact info</string>
    <string name="TaskState">State</string>
    <string name="editUserProjectSelectAll">Select all</string>
    <string name="editUserProjectUnselectAll">Unselect all</string>
    <string name="EditUsers">Edit Users</string>
    <string name="Project">Project</string>
    <string name="Sprint">Sprint</string>
    <string name="Task">Task</string>
    <string name="UserInProject">User in Project</string>
    <string name="PhotoContentDescription">Contact photo</string>
    <string name="info_no_tasks">Selected sprint has not tasks to draw</string>
    <string name="logoString">Logo image</string>
    <string name="charts_title">Estadística </string>
</resources>