<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    style="@style/LWMP.LHMP.OV" >

    <LinearLayout
        android:id="@+id/linearLayout0"
        style="@style/LWFP.LHFP.PAD20.OV" >

        <TextView
            android:id="@+id/textView3"
            style="@style/TV"
            android:text="@string/nameAddProject" />

        <EditText
            android:id="@+id/nameProjectEdit"
            style="@style/ET.T" />

        <TextView
            android:id="@+id/textView4"
            style="@style/TV"
            android:text="@string/descriptionAddProject" />

        <EditText
            android:id="@+id/descriptionEditProject"
            style="@style/ET.M" />

        <TableLayout
            android:id="@+id/tableLayout1"
            style="@style/LWMP.LHWC" >

            <TableRow
                android:id="@+id/tableRow1"
                style="@style/LWMP.LHWC" >

                <TextView
                    android:id="@+id/EditInitialDateProject"
                    style="@style/TVWCWC"
                    android:text="@string/initialDateAddProject" />

                <TextView
                    android:id="@+id/EditInitialDateProjectRes"
                    style="@style/TVWCWC"
                    android:text="" />

                <ImageView
                    android:id="@+id/editProjectInitialCalendar"
                    style="@style/LWWC.LHWC.IMAGE"
                    android:clickable="true"
                    android:contentDescription="@string/initialDateAddProject"
                    android:src="@drawable/calendar" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                style="@style/LWMP.LHWC" >

                <TextView
                    android:id="@+id/EditEndDateProject"
                    style="@style/TVWCWC"
                    android:text="@string/endDateAddProject" />

                <TextView
                    android:id="@+id/EditEndDateProjectRes"
                    style="@style/TVWCWC"
                    android:text="" />

                <ImageView
                    android:id="@+id/editProjectEndCalendar"
                    style="@style/LWWC.LHWC.IMAGE"
                    android:clickable="true"
                    android:contentDescription="@string/endDateAddProject"
                    android:src="@drawable/calendar" />
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/button1"
            style="@style/BUTTON_MW"
            android:onClick="saveData"
            android:text="@string/Save" />
    </LinearLayout>

</ScrollView>