<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    style="@style/LWMP.LHMP.OV" >

    <LinearLayout
        android:id="@+id/linearLayout2"
        style="@style/LWFP.LHFP.PAD20.OV" >

        <TextView
            android:id="@+id/addProjectLabel"
            style="@style/TV"
            android:text="@string/nameAddProject" />

        <EditText
            android:id="@+id/nameAddProjectText"
            style="@style/ET.T"
            android:hint="@string/nameAddProject" />

        <TextView
            android:id="@+id/addProjectDescriptionLabel"
            style="@style/TV"
            android:text="@string/descriptionAddProject" />

        <EditText
            android:id="@+id/descriptionAddProjectText"
            style="@style/ET.M"
            android:hint="@string/descriptionAddProject" />

        <TableLayout
            android:id="@+id/tableLayout1"
            style="@style/LWMP.LHWC" >

            <TableRow
                android:id="@+id/tableRow1"
                style="@style/LWMP.LHWC" >

                <TextView
                    android:id="@+id/addInitialDateProject"
                    style="@style/TVWCWC"
                    android:text="@string/initialDateAddProject" />

                <TextView
                    android:id="@+id/addInitialDateProjectRes"
                    style="@style/TVWCWC"
                    android:text="" />

                <ImageView
                    android:id="@+id/addProjectInitialCalendar"
                    style="@style/LWWC.LHWC.IMAGE"
                    android:clickable="true"
                    android:contentDescription="@string/initialDateAddProject"
                    android:src="@drawable/calendar" />
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                style="@style/LWMP.LHWC" >

                <TextView
                    android:id="@+id/addEndDateProject"
                    style="@style/TVWCWC"
                    android:text="@string/endDateAddProject" />

                <TextView
                    android:id="@+id/addEndDateProjectRes"
                    style="@style/TVWCWC"
                    android:text="" />

                <ImageView
                    android:id="@+id/addProjectEndCalendar"
                    style="@style/LWWC.LHWC.IMAGE"
                    android:clickable="true"
                    android:contentDescription="@string/endDateAddProject"
                    android:src="@drawable/calendar" />
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/button1"
            style="@style/BUTTON_MW"
            android:onClick="checkValues"
            android:text="@string/buttonAddProject" />
    </LinearLayout>

</ScrollView>